--- a/assets/language/en.json
+++ b/assets/language/en.json
@@ -47,8 +47,57 @@
   "completeProfile": "Complete Profile",
   "idealMatch": "Ideal Match",
   "love": "Love",
-  "you’reNotHerePlay": "You’re not here to play around",
+  "livenToHaveOne": "Liven to have one another.",
   "friends": "Friends",
-  "iWantToMeet": "I want to meet new people",
-  "business": "Business"
+  "iWantToMeet": "I want to meet new friends.",
+  "come-We-Stay": "Come-We-Stay",
+  "livenToHelp": "Liven to help one another.",
+  "imFreeToday": "I'm Free Today",
+  "CasualOrReady": "Casual or ready for fun.",
+  "business": "Business",
+  "meetBusinessOriented": "Meet business oriented people",
+  "continue": "Continue",
+  "findYourMatch!": "Find Your Match!",
+  "congratulations!": "Congratulations",
+  "itMatch!": "It’s a match",
+  "startConversation!": "Start conversation now each other",
+  "sayHello!": "Say Hello",
+  "keepSwiping!": "Keep Swiping",
+  "profileDetails!": "Profile Details",
+  "about": "About",
+  "interest": "Interest",
+  "gallery": "Gallery",
+  "notifications": "Notifications",
+  "matches": "Matches",
+  "sendMessage": "Send Message",
+  "message": "Message",
+  "slideToAnswer": "Slide to answer",
+  "updatePictures": "Update Pictures",
+  "accountInformation": "Account Information",
+  "profileDetails": "Profile Details",
+  "logOut": "Log Out",
+  "name": "Name",
+  "eatingPractice": "Eating Practice",
+  "favoriteCuisine": "Favorite Cuisine",
+  "edit": "Edit",
+  "editAccountInformation": "Edit Account Information",
+  "areYouSureToLogOut": "Are you sure you want to log out your Account?",
+  "cancel": "Cancel",
+  "yesLogOut": "Yes, Log Out",
+  "settings": "Settings",
+  "changePassword": "Change Password",
+  "setDistance": "Set a distance",
+  "privacyPolicy": "Privacy Policy",
+  "aboutUs": "About Us",
+  "deleteAccount": "Delete Account",
+  "currentPassword": "Current Password",
+  "enterYourPassword": "Enter your password",
+  "newPassword": "New Password",
+  "enterNewPassword": "Enter new password",
+  "confirmNewPassword": "Confirm New Password",
+  "reEnterNewPassword": "Re-enter new password",
+  "updatePassword": "Update Password",
+  "enterYourPasswordToDeleteAccount": "Enter your current password to delete your account.",
+  "areYouSureDeleteAccount": "Are you sure you want to delete your Account?",
+  "yesDelete": "Yes, Delete"
 }
