App All Strings Added

--- a/assets/language/en.json
+++ b/assets/language/en.json
@@ -3,9 +3,9 @@
   "meetAndConnect": "Meet and Connect with Cameroonians near you",
   "getStarted": "Get Started",
   "signIn": "Sign In",
-  "welcomeBack": " Welcome Back! Please enter your details.",
-  "userEmail": " User Email",
-  "email": " Email",
+  "welcomeBack": "Welcome Back! Please enter your details.",
+  "userEmail": "User Email",
+  "email": "Email",
   "userPassword": "User Password",
   "password": "Password",
   "rememberMe": "Remember Me",
@@ -13,7 +13,7 @@
   "donotHaveAccount": "Don’t have an account?",
   "signUp": "Sign Up",
   "forgetPassword": "Forget Password",
-  "pleaseEnterYourEmail": "Please enter your email address to reset\nyour password.",
+  "pleaseEnterYourEmail": "Please enter your email address to reset your password.",
   "getOTP": "Get OTP",
   "oTP": "OTP",
   "pleaseEnterOTP": "Please enter the OTP code, sent you in your email.",
@@ -32,6 +32,7 @@
   "uploadYourBestPhotos": "Upload your best photos to find a good match!",
   "next": "Next",
   "personalDetails": "Personal Details",
+  "success": "Success",
   "congratulationsYouHaveSuccessfully": "Congratulations! You have successfully created your account with Ndolo.",
   "dateOfBirth": "Date of Birth",
   "dD-MM-YY": "DD-MM-YY",
@@ -53,17 +54,17 @@
   "come-We-Stay": "Come-We-Stay",
   "livenToHelp": "Liven to help one another.",
   "imFreeToday": "I'm Free Today",
-  "CasualOrReady": "Casual or ready for fun.",
+  "casualOrReady": "Casual or ready for fun.",
   "business": "Business",
   "meetBusinessOriented": "Meet business oriented people",
   "continue": "Continue",
-  "findYourMatch!": "Find Your Match!",
-  "congratulations!": "Congratulations",
-  "itMatch!": "It’s a match",
-  "startConversation!": "Start conversation now each other",
-  "sayHello!": "Say Hello",
-  "keepSwiping!": "Keep Swiping",
-  "profileDetails!": "Profile Details",
+  "findYourMatch": "Find Your Match!",
+  "congratulations": "Congratulations",
+  "itMatch": "It’s a match",
+  "startConversation": "Start conversation now each other",
+  "sayHello": "Say Hello",
+  "keepSwiping": "Keep Swiping",
+  "profileDetails": "Profile Details",
   "about": "About",
   "interest": "Interest",
   "gallery": "Gallery",
@@ -74,7 +75,6 @@
   "slideToAnswer": "Slide to answer",
   "updatePictures": "Update Pictures",
   "accountInformation": "Account Information",
-  "profileDetails": "Profile Details",
   "logOut": "Log Out",
   "name": "Name",
   "eatingPractice": "Eating Practice",
