Language Change Done

--- a/assets/language/en.json
+++ b/assets/language/en.json
@@ -1,104 +1,146 @@
 {
-  "app_name": "Ndolo Dating App",
-  "meetAndConnect": "Meet and Connect with Cameroonians near you",
-  "getStarted": "Get Started",
-  "signIn": "Sign In",
-  "welcomeBack": "Welcome Back! Please enter your details.",
-  "userEmail": "User Email",
-  "email": "Email",
-  "userPassword": "User Password",
-  "password": "Password",
-  "rememberMe": "Remember Me",
-  "forgotPassword?": "Forgot Password?",
-  "donotHaveAccount": "Don’t have an account?",
-  "signUp": "Sign Up",
-  "forgetPassword": "Forget Password",
-  "pleaseEnterYourEmail": "Please enter your email address to reset your password.",
-  "getOTP": "Get OTP",
-  "oTP": "OTP",
-  "pleaseEnterOTP": "Please enter the OTP code, sent you in your email.",
-  "didnotReceiveCode": "Didn’t receive the code?",
-  "verify": "Verify",
-  "resetPassword": "Reset Password",
-  "passwordMustHave": "Password must have 8-10 characters.",
-  "confirmPassword": "Confirm Password",
-  "createAccount": "Create Account",
-  "fillTheInformation": "Fill the information to create a new account.",
-  "userName": "User Name",
-  "agreeWith": "Agree with",
-  "termsOfServices": "Terms of Services",
-  "alreadyHaveAccount": "Already have an account?",
-  "uploadPhotos": "Upload Photos",
-  "uploadYourBestPhotos": "Upload your best photos to find a good match!",
-  "next": "Next",
-  "personalDetails": "Personal Details",
-  "success": "Success",
-  "congratulationsYouHaveSuccessfully": "Congratulations! You have successfully created your account with Ndolo.",
-  "dateOfBirth": "Date of Birth",
-  "dD-MM-YY": "DD-MM-YY",
-  "gender": "Gender",
-  "male": "Male",
-  "female": "Female",
-  "location": "Location",
-  "enterYourAddress": "Enter your address/location",
-  "bio": "Bio",
-  "writeShortBio": "Write a short bio about you",
-  "selectInterest": "Select Interest",
-  "enterYourInterest": "Enter your interest",
-  "completeProfile": "Complete Profile",
-  "idealMatch": "Ideal Match",
-  "love": "Love",
-  "livenToHaveOne": "Liven to have one another.",
-  "friends": "Friends",
-  "iWantToMeet": "I want to meet new friends.",
-  "come-We-Stay": "Come-We-Stay",
-  "livenToHelp": "Liven to help one another.",
-  "imFreeToday": "I'm Free Today",
-  "casualOrReady": "Casual or ready for fun.",
-  "business": "Business",
-  "meetBusinessOriented": "Meet business oriented people",
-  "continue": "Continue",
-  "findYourMatch": "Find Your Match!",
-  "congratulations": "Congratulations",
-  "itMatch": "It’s a match",
-  "startConversation": "Start conversation now each other",
-  "sayHello": "Say Hello",
-  "keepSwiping": "Keep Swiping",
-  "profileDetails": "Profile Details",
-  "about": "About",
-  "interest": "Interest",
-  "gallery": "Gallery",
-  "notifications": "Notifications",
-  "matches": "Matches",
-  "sendMessage": "Send Message",
-  "message": "Message",
-  "slideToAnswer": "Slide to answer",
-  "updatePictures": "Update Pictures",
-  "accountInformation": "Account Information",
-  "logOut": "Log Out",
-  "name": "Name",
-  "eatingPractice": "Eating Practice",
-  "favoriteCuisine": "Favorite Cuisine",
-  "edit": "Edit",
-  "editAccountInformation": "Edit Account Information",
-  "areYouSureToLogOut": "Are you sure you want to log out your Account?",
-  "cancel": "Cancel",
-  "yesLogOut": "Yes, Log Out",
-  "settings": "Settings",
-  "changePassword": "Change Password",
-  "setDistance": "Set a distance",
-  "privacyPolicy": "Privacy Policy",
-  "aboutUs": "About Us",
-  "deleteAccount": "Delete Account",
-  "currentPassword": "Current Password",
-  "enterYourPassword": "Enter your password",
-  "newPassword": "New Password",
-  "enterNewPassword": "Enter new password",
-  "confirmNewPassword": "Confirm New Password",
-  "reEnterNewPassword": "Re-enter new password",
-  "updatePassword": "Update Password",
-  "enterYourPasswordToDeleteAccount": "Enter your current password to delete your account.",
-  "areYouSureDeleteAccount": "Are you sure you want to delete your Account?",
-  "yesDelete": "Yes, Delete",
-  "chooseYourLanguage": "Choose your language"
+  "Ndolo Dating App": "Ndolo Dating App",
+  "Meet and Connect with Cameroonians near you": "Meet and Connect with Cameroonians near you",
+  "Get Started": "Get Started",
+  "Sign In": "Sign In",
+  "Welcome Back! Please enter your details.": "Welcome Back! Please enter your details.",
+  "User Email": "User Email",
+  "Email": "Email",
+  "User Password": "User Password",
+  "Password": "Password",
+  "Remember Me": "Remember Me",
+  "Forgot Password?": "Forgot Password?",
+  "Don’t have an account?": "Don’t have an account?",
+  "Sign Up": "Sign Up",
+  "Forget Password": "Forget Password",
+  "Please enter your email address to reset your password.": "Please enter your email address to reset your password.",
+  "Get OTP": "Get OTP",
+  "OTP": "OTP",
+  "Please enter the OTP code, sent you in your email.": "Please enter the OTP code, sent you in your email.",
+  "Didn’t receive the code?": "Didn’t receive the code?",
+  "Verify": "Verify",
+  "Reset Password": "Reset Password",
+  "Password must have 8-10 characters.": "Password must have 8-10 characters.",
+  "Confirm Password": "Confirm Password",
+  "Create Account": "Create Account",
+  "Fill the information to create a new account.": "Fill the information to create a new account.",
+  "User Name": "User Name",
+  "Agree with": "Agree with",
+  "Terms of Services": "Terms of Services",
+  "Already have an account?": "Already have an account?",
+  "Upload Photos": "Upload Photos",
+  "Upload your best photos to find a good match!": "Upload your best photos to find a good match!",
+  "Next": "Next",
+  "Personal Details": "Personal Details",
+  "Success": "Success",
+  "Congratulations! You have successfully created your account with Ndolo.": "Congratulations! You have successfully created your account with Ndolo.",
+  "Date of Birth": "Date of Birth",
+  "DD-MM-YY": "DD-MM-YY",
+  "Gender": "Gender",
+  "Male": "Male",
+  "Female": "Female",
+  "Location": "Location",
+  "Enter your address/location": "Enter your address/location",
+  "Bio": "Bio",
+  "Write a short bio about you": "Write a short bio about you",
+  "Select Interest": "Select Interest",
+  "Enter your interest": "Enter your interest",
+  "Complete Profile": "Complete Profile",
+  "Ideal Match": "Ideal Match",
+  "Love": "Love",
+  "Liven to have one another.": "Liven to have one another.",
+  "Friends": "Friends",
+  "I want to meet new friends.": "I want to meet new friends.",
+  "Come-We-Stay": "Come-We-Stay",
+  "Liven to help one another.": "Liven to help one another.",
+  "I'm Free Today": "I'm Free Today",
+  "Casual or ready for fun.": "Casual or ready for fun.",
+  "Business": "Business",
+  "Meet business oriented people": "Meet business oriented people",
+  "Continue": "Continue",
+  "Find Your Match!": "Find Your Match!",
+  "Congratulations": "Congratulations",
+  "It’s a match": "It’s a match",
+  "Start conversation now each other": "Start conversation now each other",
+  "Say Hello": "Say Hello",
+  "Keep Swiping": "Keep Swiping",
+  "Profile Details": "Profile Details",
+  "About": "About",
+  "Interest": "Interest",
+  "Gallery": "Gallery",
+  "Notifications": "Notifications",
+  "Matches": "Matches",
+  "Send Message": "Send Message",
+  "Message": "Message",
+  "Slide to answer": "Slide to answer",
+  "Update Pictures": "Update Pictures",
+  "Account Information": "Account Information",
+  "Log Out": "Log Out",
+  "Name": "Name",
+  "Eating Practice": "Eating Practice",
+  "Favorite Cuisine": "Favorite Cuisine",
+  "Edit": "Edit",
+  "Edit Account Information": "Edit Account Information",
+  "Are you sure you want to log out your Account?": "Are you sure you want to log out your Account?",
+  "Cancel": "Cancel",
+  "Yes, Log Out": "Yes, Log Out",
+  "Settings": "Settings",
+  "Language": "Language",
+  "Change Password": "Change Password",
+  "Set a distance": "Set a distance",
+  "Privacy Policy": "Privacy Policy",
+  "About Us": "About Us",
+  "Delete Account": "Delete Account",
+  "Current Password": "Current Password",
+  "Enter your password": "Enter your password",
+  "New Password": "New Password",
+  "Enter new password": "Enter new password",
+  "Confirm New Password": "Confirm New Password",
+  "Re-enter new password": "Re-enter new password",
+  "Update Password": "Update Password",
+  "Enter your current password to delete your account.": "Enter your current password to delete your account.",
+  "Are you sure you want to delete your Account?": "Are you sure you want to delete your Account?",
+  "Yes, Delete": "Yes, Delete",
+  "Choose your language": "Choose your language",
+  "Filter": "Filter",
+  "Distance (Mi)": "Distance (Mi)",
+  "Minimum": "Minimum",
+  "Maximum": "Maximum",
+  "Age": "Age",
+  "Looking For": "Looking For",
+  "Match": "Match",
+  "Find Friends": "Find Friends",
+  "First Name": "First Name",
+  "Last Name": "Last Name",
+  "Phone Number": "Phone Number",
+  "Country": "Country",
+  "State": "State",
+  "City": "City",
+  "Address": "Address",
+  "Profile Image": "Profile Image",
+  "Cover Image": "Profile Image",
+  "Update": "Update",
+  "Camera": "Camera",
+  "Enter your bio...": "Enter your bio...",
+  "Your address": "Your address",
+  "Your City": "Your City",
+  "Your State": "Your State",
+  "Your Country": "Your Country",
+  "Date of birth": "Date of birth",
+  "Home": "Home",
+  "Profile": "Profile",
+  "No matches found": "No matches found",
+  "No conversations found": "No conversations found",
+  "Please enter your email": "Please enter your email",
+  "Please enter your password": "Please enter your password",
+  "Please remember me": "Please remember me",
+  "Or": "Or",
+  "Type first name": "Type first name",
+  "Please enter your first name": "Please enter your first name",
+  "Type last name": "Type last name",
+  "Please enter your last name": "Please enter your last name",
+  "Please accept Terms & Conditions": "Please accept Terms & Conditions",
+  "By creating an account, I accept the": "By creating an account, I accept the",
+  "Terms of Service": "Terms of Service",
+  "About Us.": "About Us."
 }
