--- a/assets/language/fr.json
+++ b/assets/language/fr.json
@@ -1,104 +1,146 @@
 {
-  "app_name": "App de Rencontre Ndolo",
-  "meetAndConnect": "Rencontrez et connectez-vous avec les Camerounais près de chez vous",
-  "getStarted": "Commencer",
-  "signIn": "Se connecter",
-  "welcomeBack": "Bon retour ! Veuillez entrer vos informations.",
-  "userEmail": "Email de l'utilisateur",
-  "email": "Email",
-  "userPassword": "Mot de passe de l'utilisateur",
-  "password": "Mot de passe",
-  "rememberMe": "Se souvenir de moi",
-  "forgotPassword?": "Mot de passe oublié ?",
-  "donotHaveAccount": "Vous n'avez pas de compte ?",
-  "signUp": "S'inscrire",
-  "forgetPassword": "Mot de passe oublié",
-  "pleaseEnterYourEmail": "Veuillez entrer votre adresse email pour réinitialiser votre mot de passe.",
-  "getOTP": "Obtenir le OTP",
-  "oTP": "OTP",
-  "pleaseEnterOTP": "Veuillez entrer le code OTP envoyé à votre email.",
-  "didnotReceiveCode": "Vous n'avez pas reçu le code ?",
-  "verify": "Vérifier",
-  "resetPassword": "Réinitialiser le mot de passe",
-  "passwordMustHave": "Le mot de passe doit avoir entre 8 et 10 caractères.",
-  "confirmPassword": "Confirmer le mot de passe",
-  "createAccount": "Créer un compte",
-  "fillTheInformation": "Remplissez les informations pour créer un nouveau compte.",
-  "userName": "Nom d'utilisateur",
-  "agreeWith": "Accepter les",
-  "termsOfServices": "Conditions d'utilisation",
-  "alreadyHaveAccount": "Vous avez déjà un compte ?",
-  "uploadPhotos": "Télécharger des photos",
-  "uploadYourBestPhotos": "Téléchargez vos meilleures photos pour trouver un bon match !",
-  "next": "Suivant",
-  "personalDetails": "Détails personnels",
-  "success": "Succès",
-  "congratulationsYouHaveSuccessfully": "Félicitations ! Vous avez créé votre compte avec succès sur Ndolo.",
-  "dateOfBirth": "Date de naissance",
-  "dD-MM-YY": "JJ-MM-AA",
-  "gender": "Genre",
-  "male": "Homme",
-  "female": "Femme",
-  "location": "Lieu",
-  "enterYourAddress": "Entrez votre adresse/lieu",
-  "bio": "Bio",
-  "writeShortBio": "Écrivez une courte bio sur vous",
-  "selectInterest": "Sélectionner l'intérêt",
-  "enterYourInterest": "Entrez votre intérêt",
-  "completeProfile": "Compléter le profil",
-  "idealMatch": "Match idéal",
-  "love": "Amour",
-  "livenToHaveOne": "Vivre pour avoir l'un l'autre.",
-  "friends": "Amis",
-  "iWantToMeet": "Je veux rencontrer de nouveaux amis.",
-  "come-We-Stay": "Vivre ensemble",
-  "livenToHelp": "Vivre pour s'entraider.",
-  "imFreeToday": "Je suis libre aujourd'hui",
-  "casualOrReady": "Casual ou prêt pour s'amuser.",
-  "business": "Affaires",
-  "meetBusinessOriented": "Rencontrer des gens orientés vers les affaires",
-  "continue": "Continuer",
-  "findYourMatch": "Trouvez votre match !",
-  "congratulations": "Félicitations",
-  "itMatch": "C'est un match",
-  "startConversation": "Commencez la conversation maintenant",
-  "sayHello": "Dites bonjour",
-  "keepSwiping": "Continuez à swiper",
-  "profileDetails": "Détails du profil",
-  "about": "À propos",
-  "interest": "Intérêt",
-  "gallery": "Galerie",
-  "notifications": "Notifications",
-  "matches": "Matchs",
-  "sendMessage": "Envoyer un message",
-  "message": "Message",
-  "slideToAnswer": "Glissez pour répondre",
-  "updatePictures": "Mettre à jour les photos",
-  "accountInformation": "Informations sur le compte",
-  "logOut": "Se déconnecter",
-  "name": "Nom",
-  "eatingPractice": "Pratique alimentaire",
-  "favoriteCuisine": "Cuisine préférée",
-  "edit": "Modifier",
-  "editAccountInformation": "Modifier les informations du compte",
-  "areYouSureToLogOut": "Êtes-vous sûr de vouloir vous déconnecter ?",
-  "cancel": "Annuler",
-  "yesLogOut": "Oui, se déconnecter",
-  "settings": "Paramètres",
-  "changePassword": "Changer le mot de passe",
-  "setDistance": "Définir une distance",
-  "privacyPolicy": "Politique de confidentialité",
-  "aboutUs": "À propos de nous",
-  "deleteAccount": "Supprimer le compte",
-  "currentPassword": "Mot de passe actuel",
-  "enterYourPassword": "Entrez votre mot de passe",
-  "newPassword": "Nouveau mot de passe",
-  "enterNewPassword": "Entrez le nouveau mot de passe",
-  "confirmNewPassword": "Confirmer le nouveau mot de passe",
-  "reEnterNewPassword": "Ressaisir le nouveau mot de passe",
-  "updatePassword": "Mettre à jour le mot de passe",
-  "enterYourPasswordToDeleteAccount": "Entrez votre mot de passe actuel pour supprimer votre compte.",
-  "areYouSureDeleteAccount": "Êtes-vous sûr de vouloir supprimer votre compte ?",
-  "yesDelete": "Oui, supprimer",
-  "chooseYourLanguage": "Choisissez votre langue"
+  "Ndolo Dating App": "Ndolo Dating App",
+  "Meet and Connect with Cameroonians near you": "Rencontrez et connectez-vous avec des Camerounais près de chez vous",
+  "Get Started": "Commencer",
+  "Sign In": "Se connecter",
+  "Welcome Back! Please enter your details.": "Bon retour ! Veuillez entrer vos informations.",
+  "User Email": "Email utilisateur",
+  "Email": "Email",
+  "User Password": "Mot de passe utilisateur",
+  "Password": "Mot de passe",
+  "Remember Me": "Se souvenir de moi",
+  "Forgot Password?": "Mot de passe oublié ?",
+  "Don’t have an account?": "Vous n'avez pas de compte ?",
+  "Sign Up": "S'inscrire",
+  "Forget Password": "Mot de passe oublié",
+  "Please enter your email address to reset your password.": "Veuillez entrer votre adresse e-mail pour réinitialiser votre mot de passe.",
+  "Get OTP": "Obtenir le code OTP",
+  "OTP": "OTP",
+  "Please enter the OTP code, sent you in your email.": "Veuillez entrer le code OTP envoyé à votre e-mail.",
+  "Didn’t receive the code?": "Vous n'avez pas reçu le code ?",
+  "Verify": "Vérifier",
+  "Reset Password": "Réinitialiser le mot de passe",
+  "Password must have 8-10 characters.": "Le mot de passe doit contenir 8 à 10 caractères.",
+  "Confirm Password": "Confirmer le mot de passe",
+  "Create Account": "Créer un compte",
+  "Fill the information to create a new account.": "Remplissez les informations pour créer un nouveau compte.",
+  "User Name": "Nom d'utilisateur",
+  "Agree with": "Accepter",
+  "Terms of Services": "Conditions d'utilisation",
+  "Already have an account?": "Vous avez déjà un compte ?",
+  "Upload Photos": "Télécharger des photos",
+  "Upload your best photos to find a good match!": "Téléchargez vos meilleures photos pour trouver une bonne correspondance !",
+  "Next": "Suivant",
+  "Personal Details": "Informations personnelles",
+  "Success": "Succès",
+  "Congratulations! You have successfully created your account with Ndolo.": "Félicitations ! Vous avez créé votre compte avec succès sur Ndolo.",
+  "Date of Birth": "Date de naissance",
+  "DD-MM-YY": "JJ-MM-AA",
+  "Gender": "Genre",
+  "Male": "Homme",
+  "Female": "Femme",
+  "Location": "Localisation",
+  "Enter your address/location": "Entrez votre adresse/localisation",
+  "Bio": "Biographie",
+  "Write a short bio about you": "Écrivez une courte biographie sur vous",
+  "Select Interest": "Sélectionnez un intérêt",
+  "Enter your interest": "Entrez votre intérêt",
+  "Complete Profile": "Compléter le profil",
+  "Ideal Match": "Correspondance idéale",
+  "Love": "Amour",
+  "Liven to have one another.": "Vivre pour s’aimer.",
+  "Friends": "Amis",
+  "I want to meet new friends.": "Je veux rencontrer de nouveaux amis.",
+  "Come-We-Stay": "Union libre",
+  "Liven to help one another.": "Vivre pour s'entraider.",
+  "I'm Free Today": "Je suis libre aujourd’hui",
+  "Casual or ready for fun.": "Casual ou prêt pour s’amuser.",
+  "Business": "Affaires",
+  "Meet business oriented people": "Rencontrez des personnes orientées affaires",
+  "Continue": "Continuer",
+  "Find Your Match!": "Trouvez votre match !",
+  "Congratulations": "Félicitations",
+  "It’s a match": "C'est un match",
+  "Start conversation now each other": "Commencez à discuter maintenant",
+  "Say Hello": "Dites bonjour",
+  "Keep Swiping": "Continuez à swiper",
+  "Profile Details": "Détails du profil",
+  "About": "À propos",
+  "Language": "Langue",
+  "Interest": "Intérêt",
+  "Gallery": "Galerie",
+  "Notifications": "Notifications",
+  "Matches": "Correspondances",
+  "Send Message": "Envoyer un message",
+  "Message": "Message",
+  "Slide to answer": "Glisser pour répondre",
+  "Update Pictures": "Mettre à jour les photos",
+  "Account Information": "Informations du compte",
+  "Log Out": "Se déconnecter",
+  "Name": "Nom",
+  "Eating Practice": "Habitudes alimentaires",
+  "Favorite Cuisine": "Cuisine préférée",
+  "Edit": "Modifier",
+  "Edit Account Information": "Modifier les informations du compte",
+  "Are you sure you want to log out your Account?": "Êtes-vous sûr de vouloir vous déconnecter de votre compte ?",
+  "Cancel": "Annuler",
+  "Yes, Log Out": "Oui, se déconnecter",
+  "Settings": "Paramètres",
+  "Change Password": "Changer le mot de passe",
+  "Set a distance": "Définir une distance",
+  "Privacy Policy": "Politique de confidentialité",
+  "About Us": "À propos de nous",
+  "Delete Account": "Supprimer le compte",
+  "Current Password": "Mot de passe actuel",
+  "Enter your password": "Entrez votre mot de passe",
+  "New Password": "Nouveau mot de passe",
+  "Enter new password": "Entrez un nouveau mot de passe",
+  "Confirm New Password": "Confirmer le nouveau mot de passe",
+  "Re-enter new password": "Ressaisissez le nouveau mot de passe",
+  "Update Password": "Mettre à jour le mot de passe",
+  "Enter your current password to delete your account.": "Entrez votre mot de passe actuel pour supprimer votre compte.",
+  "Are you sure you want to delete your Account?": "Êtes-vous sûr de vouloir supprimer votre compte ?",
+  "Yes, Delete": "Oui, supprimer",
+  "Choose your language": "Choisissez votre langue",
+  "Filter": "Filtrer",
+  "Distance (Mi)": "Distance (Mi)",
+  "Minimum": "Minimum",
+  "Maximum": "Maximum",
+  "Age": "Âge",
+  "Looking For": "Recherche",
+  "Match": "Correspondance",
+  "Find Friends": "Trouver des amis",
+  "First Name": "Prénom",
+  "Last Name": "Nom",
+  "Phone Number": "Numéro de téléphone",
+  "Country": "Pays",
+  "State": "État",
+  "City": "Ville",
+  "Address": "Adresse",
+  "Profile Image": "Image de profil",
+  "Cover Image": "Image de couverture",
+  "Update": "Mettre à jour",
+  "Camera": "Caméra",
+  "Enter your bio...": "Entrez votre bio...",
+  "Your address": "Votre adresse",
+  "Your City": "Votre ville",
+  "Your State": "Votre État",
+  "Your Country": "Votre pays",
+  "Date of birth": "Date de naissance",
+  "Home": "Maison",
+  "Profile": "Profil",
+  "No matches found": "Aucune correspondance trouvée",
+  "No conversations found": "Aucune conversation trouvée",
+  "Please enter your email": "Veuillez entrer votre email",
+  "Please enter your password": "Veuillez entrer votre mot de passe",
+  "Please remember me": "S'il te plaît, souviens-toi de moi",
+  "Or": "Ou",
+  "Type first name": "Entrez votre prénom",
+  "Please enter your first name": "Veuillez entrer votre prénom",
+  "Type last name": "Entrez votre nom",
+  "Please enter your last name": "Veuillez entrer votre nom",
+  "Please accept Terms & Conditions": "Veuillez accepter les conditions générales",
+  "By creating an account, I accept the": "En créant un compte, j'accepte les",
+  "Terms of Service": "Conditions d'utilisation",
+  "About Us.": "À propos de nous."
 }
