--- a/assets/language/en.json
+++ b/assets/language/en.json
@@ -142,5 +142,6 @@
   "Please accept Terms & Conditions": "Please accept Terms & Conditions",
   "By creating an account, I accept the": "By creating an account, I accept the",
   "Terms of Service": "Terms of Service",
-  "About Us.": "About Us."
+  "About Us.": "About Us.",
+  "No users found": "No users found"
 }
