--- a/assets/language/fr.json
+++ b/assets/language/fr.json
@@ -142,5 +142,6 @@
   "Please accept Terms & Conditions": "Veuillez accepter les conditions générales",
   "By creating an account, I accept the": "En créant un compte, j'accepte les",
   "Terms of Service": "Conditions d'utilisation",
-  "About Us.": "À propos de nous."
+  "About Us.": "À propos de nous.",
+  "No users found": "Aucun utilisateur trouvé"
 }
