--- a/assets/language/en.json
+++ b/assets/language/en.json
@@ -143,5 +143,6 @@
   "By creating an account, I accept the": "By creating an account, I accept the",
   "Terms of Service": "Terms of Service",
   "About Us.": "About Us.",
-  "No users found": "No users found"
+  "No users found": "No users found",
+  "Notification is empty": "Notification is empty"
 }
