--- a/assets/language/fr.json
+++ b/assets/language/fr.json
@@ -143,5 +143,6 @@
   "By creating an account, I accept the": "En créant un compte, j'accepte les",
   "Terms of Service": "Conditions d'utilisation",
   "About Us.": "À propos de nous.",
-  "No users found": "Aucun utilisateur trouvé"
+  "No users found": "Aucun utilisateur trouvé",
+  "Notification is empty": "La notification est vide"
 }
