--- a/assets/language/en.json
+++ b/assets/language/en.json
@@ -144,5 +144,6 @@
   "Terms of Service": "Terms of Service",
   "About Us.": "About Us.",
   "No users found": "No users found",
-  "Notification is empty": "Notification is empty"
+  "Notification is empty": "Notification is empty",
+  "Distance": "Distance"
 }
