--- a/assets/language/fr.json
+++ b/assets/language/fr.json
@@ -144,5 +144,6 @@
   "Terms of Service": "Conditions d'utilisation",
   "About Us.": "À propos de nous.",
   "No users found": "Aucun utilisateur trouvé",
-  "Notification is empty": "La notification est vide"
+  "Notification is empty": "La notification est vide",
+  "Distance": "Distance"
 }
