Some Issue Done

--- a/assets/language/en.json
+++ b/assets/language/en.json
@@ -118,7 +118,7 @@
   "City": "City",
   "Address": "Address",
   "Profile Image": "Profile Image",
-  "Cover Image": "Profile Image",
+  "Cover Image": "Cover Image",
   "Update": "Update",
   "Camera": "Camera",
   "Enter your bio...": "Enter your bio...",
