--- a/assets/language/en.json
+++ b/assets/language/en.json
@@ -153,5 +153,6 @@
   "Delete Message": "Delete Message",
   "Block User": "Block User",
   "Are you sure you want to delete this conversation?": "Are you sure you want to delete this conversation?",
-  "I confirm that I am 18 years old or older.": "I confirm that I am 18 years old or older."
+  "I confirm that I am 18 years old or older.": "I confirm that I am 18 years old or older.",
+  "Conversation Blocked": "Conversation Blocked"
 }
