--- a/assets/language/fr.json
+++ b/assets/language/fr.json
@@ -153,5 +153,6 @@
   "Delete Message": "Supprimer le message",
   "Block User": "Bloquer l'utilisateur",
   "Are you sure you want to delete this conversation?": "Êtes-vous sûr de vouloir supprimer cette conversation?",
-  "I confirm that I am 18 years old or older.": "Je confirme avoir 18 ans ou plus."
+  "I confirm that I am 18 years old or older.": "Je confirme avoir 18 ans ou plus.",
+  "Conversation Blocked": "Conversation bloquée"
 }
